--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
-html {background-color: #808080;}
+body {
+    background-color: #808080;
+}
 
-h1{color: #fff;
-margin: 15px;}
+h1 {
+    color: #fff;
+    margin: 15px;
+}
 
 div {
     background-color: #fea500;
